--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,13 +1,20 @@
+################################################################
+# WordPress stable nginx configuration
+#
+# http://local.wordpress.dev - this server configuration is
+# setup to listen on port 80 for any requests coming in to
+# local.wordpress.dev and use the {vvv_path_to_site}/public_html directory
+# to serve them.
 server {
- listen 80;
- listen 443 ssl;
- server_name {vvv_site_name}.dev;
- root {vvv_path_to_site};
+    listen       80;
+    listen       443 ssl;
+    server_name  {vvv_site_name}.dev;
+    root         {vvv_path_to_site}/public_html;
 
- error_log {vvv_path_to_site}/log/error.log;
- access_log {vvv_path_to_site}/log/access.log;
+    error_log    {vvv_path_to_site}/log/error.log;
+    access_log   {vvv_path_to_site}/log/access.log;
 
- set $upstream {upstream};
+    set          $upstream {upstream};
 
- include /etc/nginx/nginx-wp-common.conf;
+    include      /etc/nginx/nginx-wp-common.conf;
 }
