--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -17,4 +17,17 @@ server {
     set          $upstream {upstream};
 
     include      /etc/nginx/nginx-wp-common.conf;
+
+    # Directives to send expires headers and turn off 404 error logging.
+    location ~* .(js|css|png|jpg|jpeg|gif|ico)$ {
+             expires 24h;
+             log_not_found off;
+             try_files $uri $uri/ @production;
+    }
+
+    location @production {
+            resolver 8.8.8.8;
+            proxy_pass {nginx_live_url}/$uri;
+    }
+
 }
