--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -18,6 +18,7 @@ server {
 
     include      /etc/nginx/nginx-wp-common.conf;
 
+
     # Directives to send expires headers and turn off 404 error logging.
     location ~* .(js|css|png|jpg|jpeg|gif|ico)$ {
              expires 24h;
@@ -27,7 +28,6 @@ server {
 
     location @production {
             resolver 8.8.8.8;
-            proxy_pass {nginx_live_url}/$uri;
+            proxy_pass {live_url}/$uri;
     }
-
 }
