--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -18,7 +18,7 @@ server {
 
     include      /etc/nginx/nginx-wp-common.conf;
 
-    if ( {live_url} !== false ) {
+    if ( "{live_url}" !== false ) {
         # Directives to send expires headers and turn off 404 error logging.
         location ~* .(js|css|png|jpg|jpeg|gif|ico)$ {
                  expires 24h;
