--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -18,15 +18,6 @@ server {
 
     include      /etc/nginx/nginx-wp-common.conf;
 
-    # Directives to send expires headers and turn off 404 error logging.
-    location ~* .(js|css|png|jpg|jpeg|gif|ico)$ {
-             expires 24h;
-             log_not_found off;
-             try_files $uri $uri/ @production;
-    }
+    {live_url}
 
-    location @production {
-            resolver 8.8.8.8;
-            proxy_pass {live_url}/$uri;
-    }
 }
